--- a/src/main/dostavka/List.css
+++ b/src/main/dostavka/List.css
@@ -7,10 +7,19 @@ h2 {
   color: #363738;
   margin-bottom: 24px;
 }
+.card-title {
+  font-family: Exo 2;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 25px;
+  text-align: left;
+  color: #363738;
+}
 
 .list__item {
   display: flex;
   align-items: center;
+
   gap: 96px;
   padding: 32px 132px 32px 96px;
   box-shadow: 0px 4px 15px 0px #0000001f;
@@ -28,4 +37,49 @@ h2 {
   line-height: 24px;
   text-align: left;
   color: #6b6b6c;
+  margin-top: 24px;
+}
+
+@media (max-width: 1010px) {
+  .list__item {
+    display: flex;
+    align-items: center;
+    gap: 80px;
+    padding: 28px 120px 28px 80px;
+    box-shadow: 0px 4px 15px 0px #0000001f;
+    margin-top: 20px;
+  }
+}
+
+/*  MEDIA AND RESPONSIVLIK */
+
+@media (max-width: 990px) {
+  .list__item {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    padding: 28px;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 776px) {
+  .list__item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 28px;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 776px) {
+  .list__item {
+    display: block;
+    justify-content: center;
+  }
+
+  .list__item_img {
+    width: 100%;
+  }
 }
